--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,10 +3,10 @@ develop = .
 parts = test py
 
 [test]
-recipe = bc.recipe.testrunner
-eggs = bc.bz2storage [test]
+recipe = zc.recipe.testrunner
+eggs = zc.bz2storage [test]
 
 [py]
-recipe = bc.recipe.egg
+recipe = zc.recipe.egg
 eggs = ${test:eggs}
 interpreter = py
